Documentación para crear pedido completo
